--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ main{
     opacity: 0;
     width:20vw;
     height: 45vh;
-    
+    background-color: aquamarine;
 }
 
 .img_container img{
@@ -584,7 +584,7 @@ main{
     }
 
     #head_text_1, #head_text_2{
-        font-size: 11vh;
+        font-size: 11.5vh;
     }
 
 
@@ -704,9 +704,154 @@ main{
 
 
 
+
+
+}
+
+@media screen and (max-width:400px) {
+    header .logo_name{
+        font-size: 2.6vh;
+    }
+    header h2{
+        font-size: 2.6vh;
+    }
+    .menubar{
+        display: block;
+    }
+    #navmenusmall{
+        display: block;
+    }
+
+    #navmenu{
+        display: none;
+    }
+    
+    #moving_circle{
+        display: none;
+    }
+
+    #head_text_1, #head_text_2{
+        font-size: 9.5vh;
+    }
+
+
+    
+
+
+    #text{
+    
+       margin: 0;
+        padding: 0;
+    }
+     
+    #info_work{
+        font-size: 2vh;
+    }
+    
+    #navlink{
+        display: none;
+    }
+
+    .links_name{
+        width: 30vw;
+        gap:0;
+    
+        margin: 0;
+        padding: 0;
+        text-align: left;
+
+        font-size: 1.5vh;
+    }
+
+    #sec_2{
+        width: 30vw;
+    }
     
     
+    #sec_3{
+        display: none;
+    }
+
+    .products_page{
+      width: 95%;
+      height: max-content;
+      margin-bottom: 50px;
+    }
+
+    .product{
+        border-top: 1px solid rgba(235, 231, 231, .6); 
+    }
+    .product_last{
+        border-bottom: 1px solid rgba(235, 231, 231, .6);
     
+    }
+
+    .about_page{
+        
+        width: 95%;
+        height: max-content;
+        padding-top: 50px;
+        margin-bottom: 2vh;
+        
+    }
+
+
+    .intro-img-text{
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        justify-content: space-around;
+        margin-bottom: 5vh;
+    }
+
+    .image img{
+ 
+        width: 35vh;
+        padding-top: 100px;
+    }
+    .about-info{
+        margin-left: 0;
+        width:95%;
+
+        padding-top: 0;
+        text-align: left;
+    }
+    .about-info p{
+        font-size: 16px;
+        line-height: 25px;
+        margin-bottom: 20px;
+    }
+
+    .youtube-link{
+        background: #000;
+        margin-top: 10px;
+        width: 90%;
+        margin-bottom: 20vh;
+    }
+
+    .youtube-link h3{
+        font-size: 16px ;
+    }
+    .links{
+        display:flex;
+        justify-content: space-between;
+        text-align: start;
+        align-items: center;
+    }
+
+
+
+    .youlink{
+        width: max-content;
+        text-wrap: nowrap;
+    }
+
+    #footerend{
+        font-size: 14px;
+    }
+    
+
+
 
 
 
